# MIDI-generation

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: jazz_fusion.json  prog_rock.json
docs/research/: 01_gttm_schrodinger_bridge.md  02_symbolic_music_generation.md  03_audio_to_midi.md  04_midi_to_audio.md  05_whole_song_gen_analysis.md  06_sota_research.md  07_module_strategy.md  08_data_collection_strategy.md  09_ml_intern_integration_plan.md
scripts/: bronze_pipeline.py  filter_lakh_midi.py  generate.py  ingest_guitarpro.py  parse_ireal_charts.py
src/midi_gen/: __init__.py  cli.py
src/midi_gen/bridge/: __init__.py  schrodinger_bridge.py
src/midi_gen/candidates/: __init__.py  gating.py  generator.py
src/midi_gen/core/: __init__.py  config.py  pipeline.py  pipeline_v2.py  wsg_adapter.py
src/midi_gen/corpus/: __init__.py  ingestor.py  normalizer.py
src/midi_gen/evaluation/: __init__.py  challenge_sets.py  structural_metrics.py
src/midi_gen/gttm/: __init__.py  structural_prior.py
src/midi_gen/models/: __init__.py  diffusion_model.py
src/midi_gen/realizer/: __init__.py  note_decoder.py  realizer.py  texture_planner.py
src/midi_gen/rendering/: __init__.py  audio_renderer.py  guide_renderer.py
src/midi_gen/schema/: __init__.py  bar_texture.py  beat_state.py  converters.py
src/midi_gen/scorer/: __init__.py  model.py  training.py
src/midi_gen/utils/: __init__.py  midi_utils.py
tests/: test_pipeline.py  test_v2_modules.py
