[project]
name = "midi-generation"
version = "0.3.0"
description = "GTTM-informed Schrödinger Bridge MIDI generation with beat-level structural tokens, multitrack realization, and guide-audio rendering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "SNET AI Music Team"},
]
keywords = [
    "midi",
    "music-generation",
    "diffusion",
    "gttm",
    "schrodinger-bridge",
    "progressive-rock",
    "jazz-fusion",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pretty-midi>=0.2.10",
]

[project.optional-dependencies]
audio = [
    "midi2audio>=0.1.1",
]
torch = [
    "torch>=2.0",
]
# Gold-tier data ingestion: GuitarPro parser, iReal Pro parser, Lakh filter
ingest-gold = [
    "pyguitarpro>=0.9",
    "beautifulsoup4>=4.12",
    "tables>=3.8",
]
# Bronze-tier data ingestion: source separation + transcription
ingest-bronze = [
    "demucs>=4.0",
    "basic-pitch>=0.3",
    "librosa>=0.10",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
all = [
    "midi2audio>=0.1.1",
    "torch>=2.0",
    "pyguitarpro>=0.9",
    "beautifulsoup4>=4.12",
    "tables>=3.8",
    "demucs>=4.0",
    "basic-pitch>=0.3",
    "librosa>=0.10",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
midi-gen = "midi_gen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/midi_gen"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["midi_gen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
